modificado nombre boton

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Web Audio API Synth 2.0</h1>
             <article>
                 <button id="create-audioctx-btn">
-                    Create audio context
+                    0N - OFF
                 </button>
                 <label>
                     Master 
