modificada funcion de load preset

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             </article>
 
             <article id="load-preset">
-                <label><button id="load-preset-btn" disabled>Load preset</button>
-                    <input type="file" id="preset-file" name="preset-file" accept=".json" disabled>
+                <label><button id="load-preset-btn">Load preset</button>
+                    <input type="file" id="preset-file" name="preset-file" accept=".json">
                 </label>
                 <p>Load .json file</p>
                 <p id="preset"></p>
@@ -112,5 +112,6 @@
 
 
     <script src="js/synth.js"></script>
+    <script src="js/keyboard.js"></script>
 </body>
 </html>
