--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
     </main>   
 
 
+    <footer>
+        <a href="https://github.com/JusRecondo/wsynth2.0" target="_blank">GitHub</a>
+    </footer>
     <script src="js/synth.js"></script>
-    <script src="js/keyboard.js"></script>
 </body>
 </html>
