Agregado parrafo con info sobre envolvente

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
                     <span>0.00</span>
                 </label>
                 <button id="activate-eg-btn">
-                    Activate Envelope
+                    Activar envolvente
                  </button>
+                <p id="evelope-info">En caso de estar en un dispositivo móvil, no activar la envolvente a menos que se conecte un controlador midi.</p> 
             </article>
 
             <article id="envelope" class="disabled">
