--- a/index.html
+++ b/index.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WAA2</title>
+
+    <meta property="og:title" content="W-Synth">
+    <meta property="og:description"
+          content="Proyecto de sintetizador desarrollado en HTML, CSS y JavaScript, utilziando la Web Audio API.">
+    <meta property="og:image"
+          content="https://jusrecondo.github.io/wsynth2.0/img/sinte.png">
+    <meta property="og:url"
+          content="https://jusrecondo.github.io/wsynth2.0/">
+    <meta property="og:type" content="website">
+
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <link rel="stylesheet" href="css/styles.css">
+    
+    <title>W-Synth</title>
+
 </head>
 <body>
     <main>
         <section id="master">
             <article id="master-gain">
-                <h1>Web Audio API Synth 2.0</h1>
+                <h1>W-Synth</h1>
                 <button id="create-audioctx-btn">
                     0N - OFF
                 </button>
