Correccion en etiquetas meta

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
     <meta property="og:title" content="W-Synth">
     <meta property="og:description"
-          content="Proyecto de sintetizador desarrollado en HTML, CSS y JavaScript, utilziando la Web Audio API.">
+          content="Proyecto de sintetizador desarrollado en HTML, CSS, JavaScript y la Web Audio API.">
     <meta property="og:image"
-          content="https://jusrecondo.github.io/wsynth2.0/img/sinte.png">
+          content="https://jusrecondo.github.io/w-synth/img/sinte.png">
     <meta property="og:url"
-          content="https://jusrecondo.github.io/wsynth2.0/">
+          content="https://jusrecondo.github.io/w-synth/">
     <meta property="og:type" content="website">
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
