agregadas funcionalidades MIDI

--- a/index.html
+++ b/index.html
@@ -219,8 +219,10 @@
             <article id="midi">
                 <h3>MIDI Config - <span id="midi-info">No device connected</span></h3>
                 <p>MIDI notes<br>
-                   CC7 Filter Cut Off <br>
-                   CC10 Filter Resonance
+                   CC7 Filter Cut Off |
+                   CC10 Filter Resonance |
+                   CC11 LFO Rate |
+                   CC91 LFO Amount |
                 </p>
             </article>
         </section>
