Added parameter randomizer

--- a/index.html
+++ b/index.html
@@ -215,6 +215,10 @@
                 <p>Open or drag .json file</p>
                 <p id="preset"></p>
             </article>
+
+            <article id="randomize-preset">
+                <button id="randomize-preset-btn">Randomize preset</button>
+            </article>
         </section>
         <section>
             <article id="midi">
