--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@
                 <p>Load .json file</p>
                 <p id="preset"></p>
             </article>
+
+            <article id="randomize-preset">
+                <button id="randomize-preset-btn">Randomize preset</button>
+            </article>
         </section>
         <section>
             <article id="midi">
