trigger envelope button

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
                     <input type="range" id="release" min="0.01" max="3" step="0.1" value="0.01">
                     <span>0</span>
                 </label>
+
+                <button id="trigger-envelope">
+                    TRIGGER
+                </button>
             </article>
 
             <article id="filter">
